--- a/_config.yml
+++ b/_config.yml
@@ -26,6 +26,7 @@ description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://tammymakesthings.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  tammymakesthings
+markdown: GFM
 
 # Build settings
 theme: minima
