--- a/.github/workflows/deploy-site.yml
+++ b/.github/workflows/deploy-site.yml
@@ -20,7 +20,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-gems-
 
-      - uses: jeffreytse/jekyll-deploy-action@0.4.0
+      - uses: jeffreytse/jekyll-deploy-action@v0.4.0
         with:
           provider: 'github'
           token: ${{ secrets.GITHUB_TOKEN }}
