--- a/.github/workflows/deploy-site.yml
+++ b/.github/workflows/deploy-site.yml
@@ -32,5 +32,5 @@ jobs:
           bundler_ver: '>=0'
           cname: ''
           actor: ''
-          pre_build_commands: ''
+          pre_build_commands: 'curl -fsSL https://deb.nodesource.com/setup_18.x | bash - && apt-get install -y nodejs'
       
