--- a/.github/workflows/deploy-site.yml
+++ b/.github/workflows/deploy-site.yml
@@ -11,26 +11,21 @@ jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - name: Check out latest updates
+        uses: actions/checkout@v2
 
-      - uses: actions/cache@v3
+      - name: Cache Ruby Gems
+        uses: actions/cache@v1
         with:
-          path: vendor/bundle
+          path: vendor/gems
           key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile.lock') }}
           restore-keys: |
-            ${{ runner.os }}-gems-
-
-      - uses: jeffreytse/jekyll-deploy-action@v0.4.0
-        with:
-          provider: 'github'
-          token: ${{ secrets.GITHUB_TOKEN }}
-          repository: ''
-          branch: 'main'
-          jekyll_src: './'
-          jekyll_cfg: '_config.yml'
-          jekyll_baseurl: ''
-          bundler_ver: '>=0'
-          cname: ''
-          actor: ''
-          pre_build_commands: 'curl -fsSL https://deb.nodesource.com/setup_18.x | bash - && apt-get install -y nodejs'
+            ${{ runner.os }}-build-
+            ${{ runner.os }}-
+  
+      - name: Build and Deploy to GitHub Pages
+        uses: DavidS/jekyll-deploy@main
+        env:
+          JEKYLL_ENV: production
+          GH_PAGES_TOKEN: ${{ secrets.GH_PAGES_TOKEN }}
       
