--- a/_config.yml
+++ b/_config.yml
@@ -32,6 +32,8 @@ url: "https://tammymakesthings.github.io"
 github:
   username: tammymakesthings # change to your github username
 
+paginate: 10
+
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
@@ -114,9 +116,6 @@ assets:
 
 pwa:
   enabled: true # the option for PWA feature
-
-pagination: 
-  per_page: 10
 
 relative_links:
   enabled: true
