--- a/_config.yml
+++ b/_config.yml
@@ -1,33 +1,15 @@
-# The Site Configuration
-
-# Import the theme
 theme: jekyll-theme-chirpy
 
-# Change the following value to '/PROJECT_NAME' ONLY IF your site type is GitHub Pages Project sites
-# and doesn't have a custom domain.
 baseurl: ""
-
-# The language of the webpage › http://www.lingoes.net/en/translator/langcode.htm
-# If it has the same name as one of the files in folder `_data/locales`, the layout language will also be changed,
-# otherwise, the layout language will use the default value of 'en'.
 lang: en
-
-# Change to your timezone › http://www.timezoneconverter.com/cgi-bin/findzone/findzone
 timezone: America/Phoenix
 
-# jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
-# ↓ --------------------------
-
 title: tammy makes things # the main title
-
 tagline: electronics, making, coding, &amp; tech
-
 description: >- # used by seo meta and the atom feed
   Electronics projects, CircuitPython, programming, making, coding, and tech
   commentary by Tammy Cravit.
-
-# fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
-url: "https://tammymakesthings.github.io"
+url: "https://tammymakesthings.com"
 
 github:
   username: tammymakesthings # change to your github username
@@ -35,19 +17,13 @@ github:
 paginate: 10
 
 social:
-  # Change to your full name.
-  # It will be displayed as the default author of the posts and the copyright owner in the Footer
   name: tammy cravit
   email: tammy@tammymakesthings.com # change to your email address
   links:
-    # The first element serves as the copyright owner's link
     - https://github.com/tammymakesthings # change to your github homepage
     - https://techhub.social/@tammymakesthings
 
 google_site_verification: # fill in to your verification string
-
-# ↑ --------------------------
-# The end of `jekyll-seo-tag` settings
 
 google_analytics:
   id: # fill in your Google Analytics ID
@@ -56,35 +32,13 @@ google_analytics:
     proxy_endpoint: # fill in the Google Analytics superProxy endpoint of Google App Engine
     cache_path: # the local PV cache data, friendly to visitors from GFW region
 
-# Prefer color scheme setting.
-#
-# Note: Keep empty will follow the system prefer color by default,
-# and there will be a toggle to switch the theme between dark and light
-# on the bottom left of the sidebar.
-#
-# Available options:
-#
-#     light  - Use the light color scheme
-#     dark   - Use the dark color scheme
-#
 theme_mode: dark
 
-# The CDN endpoint for images.
-# Notice that once it is assigned, the CDN url
-# will be added to all image (site avatar & posts' images) paths starting with '/'
-#
-# e.g. 'https://cdn.com'
-#img_cdn: "https://chirpy-img.netlify.app"
-
-# the avatar on sidebar, support local or CORS resources
 avatar: "/commons/avatar.jpg"
-
-# boolean type, the global switch for TOC in posts.
 toc: true
 
 comments:
-  active: # The global switch for posts comments, e.g., 'disqus'.  Keep it empty means disable
-  # The active options are as follows:
+  active: disqus
   disqus:
     shortname: "tammy-makes-things"
   # utterances settings › https://utteranc.es/
@@ -121,13 +75,11 @@ relative_links:
   enabled: true
   collections: true
 
-# ------------ The following options are not recommended to be modified ------------------
-
 kramdown:
   syntax_highlighter: rouge
   syntax_highlighter_opts: # Rouge Options › https://github.com/jneen/rouge#full-options
     css_class: highlight
-    # default_lang: console
+    default_lang: console
     span:
       line_numbers: false
     block:
@@ -141,14 +93,12 @@ collections:
 
 defaults:
   - scope:
-      path: "" # An empty string here means all files in the project
+      path: ""
       type: posts
     values:
       layout: post
-      comments: true # Enable comments in posts.
-      toc: true # Display TOC column in posts.
-      # DO NOT modify the following parameter unless you are confident enough
-      # to update the code of all other post links in this project.
+      comments: true
+      toc: true
       permalink: /posts/:title/
   - scope:
       path: _drafts
@@ -156,7 +106,7 @@ defaults:
       comments: false
   - scope:
       path: ""
-      type: tabs # see `site.collections`
+      type: tabs
     values:
       layout: page
       permalink: /:title/
@@ -202,9 +152,9 @@ jekyll-archives:
     category: /categories/:name/
 
 
-  pre-commit:
-    - check: FrontMatterVariableExists
-      variables: ['date', 'categories', 'tags', 'title']
-    - check: FrontMatterVariableMeetsLengthRequirements
-      variables: ['title||100', '|date|10|10']
-    - check: NoDuplicateTags
+pre-commit:
+  - check: FrontMatterVariableExists
+    variables: ['date', 'categories', 'tags', 'title']
+  - check: FrontMatterVariableMeetsLengthRequirements
+    variables: ['title||100', '|date|10|10']
+  - check: NoDuplicateTags
