temporarily revert CNAME change

--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ tagline: electronics, making, coding, &amp; tech
 description: >- # used by seo meta and the atom feed
   Electronics projects, CircuitPython, programming, making, coding, and tech
   commentary by Tammy Cravit.
-url: "https://tammymakesthings.com"
+url: "https://tammymakesthings.github.io"
 
 github:
   username: tammymakesthings # change to your github username
