--- a/_config.yml
+++ b/_config.yml
@@ -99,17 +99,19 @@ defaults:
       layout: post
       comments: true
       toc: true
-      permalink: /posts/:title/
+      permalink: "/posts/:year/:month/:year-:month-:day-:title/"
   - scope:
       path: _drafts
     values:
       comments: false
+      published: false
   - scope:
       path: ""
       type: tabs
     values:
       layout: page
       permalink: /:title/
+      comments: false
   - scope:
       path: assets/img/favicons
     values:
