fix metadata and sharing options

--- a/_config.yml
+++ b/_config.yml
@@ -100,6 +100,7 @@ defaults:
       comments: true
       toc: true
       permalink: "/posts/:year/:month/:year-:month-:day-:title/"
+      excerpt_separator: "<!--more-->"
   - scope:
       path: _drafts
     values:
