--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -6,12 +6,8 @@
 #   url: {homepage_of_author}
 # -------------------------------------
 
-cotes:
-  name: Cotes Chung
-  twitter: cotes2020
-  url: https://github.com/cotes2020/
+tammy:
+  name: Tammy Cravit
+  twitter: 
+  url: https://tammymakesthings.com/about/
 
-sille_bille:
-  name: Dinesh Prasanth Moluguwan Krishnamoorthy
-  twitter: dinesh_MKD
-  url: https://github.com/SilleBille/
